# autoplaylist

./: .gitignore  README.md  install.sh  pyproject.toml  pytest.ini  uninstall.sh
.github/workflows/: release.yml
Formula/: myplaylist.rb
autoplaylist/: _commands.py  cache.py  cli.py  config.py  daemon.py  discovery.py  doctor.py  export.py  hotkeys.py  llm.py  lyrics.py  player.py  playlist.py  setup.py
openspec/changes/decouple-player-core-ui/: design.md  proposal.md  tasks.md
openspec/changes/decouple-player-core-ui/specs/playlist-player/: spec.md
tests/: test_config.py  test_ctl_socket.py  test_daemon.py  test_export.py  test_hotkeys.py  test_integration_discovery.py  test_player_core.py  test_playlist.py  test_setup_detect.py
