[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myplaylist"
version = "0.3.19"
description = "Generate and play music playlists from natural language prompts or seed songs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "eddie" }
]
keywords = ["music", "playlist", "cli", "youtube", "lastfm", "mpv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "yt-dlp>=2025.1.1",
    "pylast>=5.2",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8"]

[project.urls]
Homepage = "https://github.com/haoziwlh/autoplaylist"
Repository = "https://github.com/haoziwlh/autoplaylist"

[project.scripts]
myplaylist = "autoplaylist.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoplaylist*"]
